Please Commit this time

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/APainfulMemory.github.io/FileContentIndex/71b75637-e97f-4da5-acbe-796f1c3c3e0b.vsidx
+/.vs/APainfulMemory.github.io/FileContentIndex/f3e256ac-2256-4f83-acf9-6bb410a126b6.vsidx
