--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@
 
 /.vs/APainfulMemory.github.io/FileContentIndex/71b75637-e97f-4da5-acbe-796f1c3c3e0b.vsidx
 /.vs/APainfulMemory.github.io/FileContentIndex/f3e256ac-2256-4f83-acf9-6bb410a126b6.vsidx
+/.vs/APainfulMemory.github.io/FileContentIndex/081500a1-21f2-401b-8374-c19447d0abf4.vsidx
+/.vs/APainfulMemory.github.io/FileContentIndex/aae99661-3bf1-4ea5-b47c-fb9496876625.vsidx
+/.vs/APainfulMemory.github.io/FileContentIndex/fa36c1d6-2ba3-48a2-8928-4818ffa65a29.vsidx
+/.vs/APainfulMemory.github.io/FileContentIndex/fbb31e00-e849-4f5c-9cfa-ab3d64024edf.vsidx
+/.vs/APainfulMemory.github.io/FileContentIndex/a188b748-bd74-4791-a9d8-f9784a94255e.vsidx
+/.vs/APainfulMemory.github.io/FileContentIndex/afa9fc71-7d03-4b3d-a8ae-eb4936f9f21d.vsidx
+*.vsidx
